# Server

./: CLIENTAPI  IDEAS  Makefile  Makefile.am  Makefile.old  config.h.in  configure  configure.ac
autom4te.cache/: output.0  traces.0
include/: avl.h  child.h  debug.h  defaults.h  logging.h  main.h  mysignal.h  server.h  type.h
lib/: Makefile  server.c  server.h  test_server.c
src/: avl.c  child.c  client.c  debug.c  logging.c  main.c  server.c  signal.c
test/: Makefile  command.pl  errfile  logfile  test.c
